--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+DirectoryIndex index.php
+
 <IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^alpha.metatooth.com$
@@ -6,5 +8,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /wp/$1
 RewriteCond %{HTTP_HOST} ^alpha.metatooth.com$
-RewriteRule ^(/)?$ index.php [L]
+RewriteRule ^(/)?$ wp/index.php [L]
 </IfModule>
