--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,10 @@
-DirectoryIndex index.php
-
 <IfModule mod_rewrite.c>
 RewriteEngine on
-RewriteCond %{HTTP_HOST} ^alpha.metatooth.com$
+RewriteCond %{HTTP_HOST} ^protected-mesa-48006.herokuapp.com$
 RewriteCond %{REQUEST_URI} !^/wp/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /wp/$1
-RewriteCond %{HTTP_HOST} ^alpha.metatooth.com$
+RewriteCond %{HTTP_HOST} ^protected-mesa-48006.herokuapp.com$
 RewriteRule ^(/)?$ wp/index.php [L]
 </IfModule>
