Turn on rewrite log

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
+LogLevel alert rewrite:trace3
+
 <IfModule mod_rewrite.c>
 RewriteEngine on
-RewriteLog "/app/rewrite.log"
-RewriteLogLevel 3
 RewriteCond %{HTTP_HOST} ^protected-mesa-48006.herokuapp.com$
 RewriteCond %{REQUEST_URI} !^/wp/
 RewriteCond %{REQUEST_FILENAME} !-f
