--- a/nginx.inc.conf
+++ b/nginx.inc.conf
@@ -1,4 +1,4 @@
-index index.php index.htm index.html;
+index index.php;
 
 rewrite ^/(wp-.*.php)$ /wp/$1 last;
 rewrite ^/(wp-(content|admin|includes).*) /wp/$1 last;
