--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "php": ">=5.4",
     "johnpbloch/wordpress": ">=5.1",
-    "wpackagist-plugin/amazon-s3-and-cloudfront":"*",
+    "wpackagist-plugin/amazon-s3-and-cloudfront":"2.2.1",
     "wpackagist-plugin/classic-editor":"*",
     "wpackagist-plugin/insert-headers-and-footers":"*",
     "wpackagist-plugin/mailchimp-for-wp":"*",
