--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require": {
     "johnpbloch/wordpress": ">=5.8",
+    "wp-cli/wp-cli": "^1.1.0",
     "wpackagist-plugin/amazon-s3-and-cloudfront":"*",
     "wpackagist-plugin/classic-editor":"*",
     "wpackagist-plugin/insert-headers-and-footers":"*",
@@ -27,5 +28,8 @@
     "wpackagist-plugin/wordpress-seo":"*",
     "wpackagist-plugin/wp-easycart":"*",
     "wpackagist-theme/techup":"*"
+  },
+  "scripts": {
+    "wordpress-setup-core-install": "wp core install --skip-email"
   }
 }
