--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
      }
   },
   "require": {
+    "ext-gd": "*",
     "johnpbloch/wordpress": ">=5.8",
     "wp-cli/wp-cli": "^1.1.0",
     "wpackagist-plugin/amazon-s3-and-cloudfront":"*",
