--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "ext-gd": "*",
     "johnpbloch/wordpress": ">=5.8",
-    "wp-cli/wp-cli": "^1.1.0",
+    "wp-cli/wp-cli": ">=2.5.0",
     "wpackagist-plugin/amazon-s3-and-cloudfront":"*",
     "wpackagist-plugin/classic-editor":"*",
     "wpackagist-plugin/insert-headers-and-footers":"*",
