--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,6 @@
           "url":"https://wpackagist.org"
       }
   ],
-  "extra": {
-    "wordpress-install-dir": "wp"
-  },
   "require": {
     "php": ">=8.0",
     "ext-gd": "*",
@@ -25,6 +22,13 @@
     "wpackagist-plugin/wp-easycart":"*",
     "wpackagist-theme/twentytwentyone":"*",
     "wpackagist-theme/techup":"*"
+  },
+  "extra": {
+    "installer-paths": {
+      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
+      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+    },
+    "wordpress-install-dir": "web/wp"
   },
   "scripts": {
     "wordpress-setup-core-install": "wp core install --skip-email"
