serve from /web

--- a/nginx.inc.conf
+++ b/nginx.inc.conf
@@ -1,8 +1,8 @@
 index index.php;
 
 rewrite ^/(wp-.*.php)$ /wp/$1 last;
-rewrite ^/(wp-(content|admin|includes).*) /wp/$1 last;
+rewrite ^/(wp-(content|admin|includes).*) /web/$1 last;
 
 location / {
-  try_files $uri $uri/ /index.php?$args;
+  try_files $uri $uri/ /web/index.php?$args;
 }
