--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "johnpbloch/wordpress": "5.8.2",
+    "johnpbloch/wordpress": "^5.3",
     "wp-cli/wp-cli": "*"
   },
   "extra": {
