--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
   "require": {
-    "johnpbloch/wordpress": "^5.3",
+    "johnpbloch/wordpress": "5.3.10",
     "wp-cli/wp-cli": "*"
   },
   "extra": {
     "wordpress-install-dir": "wp"
+  },
+  "config": {
+    "allow-plugins": {
+      "johnpbloch/wordpress-core-installer": true
+    }
   }
 }
