--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
   "extra": {
     "wordpress-install-dir": "wp",
     "installer-paths": {
-      "content/plugins/{$name}/": ["type:wordpress-plugin"],
-      "content/themes/{$name}/": ["type:wordpress-theme"]
+      "wp/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
+      "wp/wp-content/themes/{$name}/": ["type:wordpress-theme"]
     }
   },
   "config": {
